--- a/平时踩坑总结/数组方法再也不乱.md
+++ b/平时踩坑总结/数组方法再也不乱.md
@@ -97,6 +97,22 @@ fruits.splice(2,1,"Lemon","Kiwi")
 // [Banana,Orange,Lemon,Kiwi,Mango]
 ```
 
+splice() 方法在 ES5 中常用来数组去重，相当经典。
+
+```js
+var arr = [1,2,2,3,4,2]
+  for(var i=0; i<arr.length; i++){
+    for(var j=i+1; j<arr.length; j++){
+      if(arr[i]==arr[j]){         //如果第一个和第二个一样，splice方法减去第二个；
+        arr.splice(j,1)
+        // 设置j-- 防止删除元素后，下面第一位元素遗漏
+        j--
+      }
+    }
+  }
+// arr [1, 2, 3, 4]
+```
+
 ##### `sort()` 排序数组
 
 参数：排序规则函数或无参数
