--- a/JS算法与数据结构/数组.md
+++ b/JS算法与数据结构/数组.md
@@ -83,3 +83,40 @@ function twoSum (arr, target) {
   }
 }
 ```
+
+## 三数之和
+
+```js
+function threeSum (nums) {
+  // 先将数组排序
+  nums.sort((a, b) => a - b);
+  const result = [];
+  for (let i = 0; i < nums.length; i++) {
+    // 跳过重复的数字
+    if (i && nums[i] === nums[i - 1]) { continue; }
+    // 利用双指针
+    let left = i + 1;
+    let right = nums.length - 1;
+    while (left < right) {
+      const sum = nums[i] + nums[left] + nums[right];
+      if (sum < 0) {
+        left++;
+      } else if (sum > 0) {
+        right--;
+      } else {
+        result.push([nums[i], nums[left++], nums[right--]]);
+
+        // 去除重复数字
+        while (nums[left] === nums[left - 1]) {
+          left++;
+        }
+
+        while (nums[right] === nums[right + 1]) {
+          right--;
+        }
+      }
+    }
+  }
+  return result;
+}
+```
