✍️  反转链表&删除链表中到节点

--- a/JS算法与数据结构/链表.md
+++ b/JS算法与数据结构/链表.md
@@ -15,3 +15,49 @@ function reverseList(head) {
   return array;
 }
 ```
+
+## 删除链表中的某个节点
+
+> 思路：分三种情况。1. 删除节点为头部节点，只有一个节点；2. 删除节点为中间节点，不是尾部节点，直接覆盖。3. 删除节点为尾部节点，遍历到尾部节点前一个节点，删除尾部节点。
+
+```js
+// 删除节点为 node，头部节点 head
+
+function delNode (head, node) {
+  if (node.next) {
+
+    // 直接覆盖
+    node.val = node.next.val;
+    node.next = node.next.next;
+  } else if (node === head) {
+    node = null;
+    head = null;
+  } else {
+    node = head;
+    // 遍历到尾部节点前一位节点
+    while (node.next.next) {
+      node = node.next;
+    }
+    node.next = null;
+    node = null
+  }
+}
+```
+
+## 反转链表
+
+```js
+
+function reverseList = (head) {
+  let currentNode = null;
+  let headNode = head;
+
+  while (head && head.next) {
+    currentNode = head.next;
+    head.next = currentNode.next;
+    currentNode.next = headNode;
+    headNode = currentNode;
+  }
+  return headNode;
+}
+```
